--- a/NetworkClient/src/ru/geekbrains/java2/client/view/chatform/ClientChatForm.fxml
+++ b/NetworkClient/src/ru/geekbrains/java2/client/view/chatform/ClientChatForm.fxml
@@ -3,12 +3,12 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="mainPane" fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.geekbrains.java2.client.chatform.ClientChatController">
+<AnchorPane id="mainPane" fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.geekbrains.java2.client.view.chatform.ClientChatController">
    <children>
       <Button id="sendButton" fx:id="sendButton" defaultButton="true" layoutX="483.0" layoutY="361.0" mnemonicParsing="false" onAction="#sendBtnAction" prefHeight="25.0" prefWidth="107.0" style="-fx-background-color: lightgreen;" text="Отправить" textFill="#1a00ff" wrapText="true" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="10.0" />
       <TextField fx:id="enteredText" layoutX="110.0" layoutY="360.0" prefHeight="27.0" prefWidth="365.0" promptText="введите сообщение" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="110.0" AnchorPane.rightAnchor="125.0" />
       <TextArea id="chatArea" fx:id="chatArea" editable="false" layoutX="110.0" layoutY="37.0" prefHeight="312.0" prefWidth="480.0" AnchorPane.bottomAnchor="51.0" AnchorPane.leftAnchor="110.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="37.0" />
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="15.0" prefHeight="17.0" prefWidth="94.0" text="Контакты" textAlignment="JUSTIFY" textFill="#0522ff" />
-      <ListView id="contactList" fx:id="contactList" editable="true" layoutX="10.0" layoutY="36.0" onMouseClicked="#contactListClicked" prefHeight="352.0" prefWidth="94.0" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="36.0" />
+      <ListView id="contactList" fx:id="usersList" editable="true" layoutX="10.0" layoutY="36.0"  prefHeight="352.0" prefWidth="94.0" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="36.0" />
    </children>
 </AnchorPane>
